# WasmEdge

./: search-index.js  settings.html  source-files.js
bindings/rust/wasmedge-sys/: Cargo.toml  build.rs
bindings/rust/wasmedge-sys/examples/: async_exported_wasm_func.rs  async_host_func.rs  async_host_func2.rs  async_host_func_indirect.rs  async_run_func.rs  async_run_named_func.rs  async_run_wasm_from_bytes.rs  async_run_wasm_from_file.rs  call_hostfunc_chain.rs  func_call_across_different_modes.rs  hostfunc.rs  hostfunc2.rs  stop_async_func_by_timeout.rs  table_and_funcref.rs  tokio_in_wasm.rs  vm_register_import_module.rs  wasi_module.rs  wasi_print_env.rs
bindings/rust/wasmedge-sys/examples/data/: run_tokio_in_wasm.wasm
bindings/rust/wasmedge-sys/examples/run-tokio-in-wasm/: Cargo.toml
bindings/rust/wasmedge-sys/examples/run-tokio-in-wasm/src/: lib.rs
bindings/rust/wasmedge-sys/src/: ast_module.rs  async.rs  async_env.rs  compiler.rs  config.rs  error.rs  executor.rs  import_obj.rs  io.rs  lib.rs  module.rs  store.rs  types.rs  vm.rs  vm_new.rs
bindings/rust/wasmedge-sys/src/instance/: custom_wasi_module.rs  function.rs  global.rs  memory.rs  mod.rs  module.rs  table.rs
bindings/rust/wasmedge-sys/tests/: common.rs  test_aot.rs
utils/: install_v2.sh
wasmedge_macro/: all.html  attr.host_function.html  attr.sys_host_function.html  index.html  sidebar-items.js
wasmedge_sdk/: all.html  attr.host_function.html  enum.CompilerOptimizationLevel.html  enum.CompilerOutputFormat.html  enum.ExternalInstanceType.html  enum.Mutability.html  enum.RefType.html  (+38 more)
(+229 files in other folders)
