[package]
build = "build.rs"
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/WasmEdge/wasmedge_sys/"
edition = "2021"
exclude = ["tests/", "examples/"]
license = "Apache-2.0"
links = "wasmedge"
name = "wasmedge-sys"
readme = "README.md"
repository = "https://github.com/WasmEdge/WasmEdge/blob/master/bindings/rust/wasmedge-sys"
version = "0.10.0"

[dependencies]
futures = "0.3.23"
lazy_static = "1.4.0"
libc = "0.2.94"
parking_lot = "0.12.1"
paste = "1.0.5"
rand = "0.8.4"
switcher2 = "0.1.0"
thiserror = "1.0.30"
tokio = {version = "1.20.1", features = ["full"]}
wasmedge-macro = {path = "../wasmedge-macro", version = "0.1.0"}
wasmedge-types = {path = "../wasmedge-types", version = "0.3.0"}

[build-dependencies]
bindgen = {version = "0.60.1", default-features = false, features = ["runtime"]}
cmake = "0.1"

[features]
aot = []
default = ["aot"]
wasi_crypto = []
wasi_nn = []
